@@ -114,11 +114,15 @@ endif (NOT MSVC)
 
 # installation paths
 
+if (NOT WIN32)
+	include (GNUInstallDirs)
+endif (NOT WIN32)
+
 if (NOT KADU_BINDIR)
 	if (WIN32)
 		set (KADU_BINDIR ${CMAKE_INSTALL_PREFIX})
 	else (WIN32)
-		set (KADU_BINDIR ${CMAKE_INSTALL_PREFIX}/bin)
+		set (KADU_BINDIR ${CMAKE_INSTALL_FULL_BINDIR})
 	endif (WIN32)
 endif (NOT KADU_BINDIR)
 
@@ -126,7 +130,7 @@ if (NOT KADU_DATADIR)
 	if (WIN32)
 		set (KADU_DATADIR ${CMAKE_INSTALL_PREFIX})
 	else (WIN32)
-		set (KADU_DATADIR ${CMAKE_INSTALL_PREFIX}/share/kadu)
+		set (KADU_DATADIR ${CMAKE_INSTALL_FULL_DATADIR}/kadu)
 	endif (WIN32)
 endif (NOT KADU_DATADIR)
 
@@ -134,7 +138,7 @@ if (NOT KADU_PLUGINS_LIBDIR)
 	if (WIN32)
 		set (KADU_PLUGINS_LIBDIR ${CMAKE_INSTALL_PREFIX}/plugins)
 	else (WIN32)
-		set (KADU_PLUGINS_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/kadu/plugins)
+		set (KADU_PLUGINS_LIBDIR ${CMAKE_INSTALL_FULL_LIBDIR}/kadu/plugins)
 	endif (WIN32)
 endif (NOT KADU_PLUGINS_LIBDIR)
 
@@ -153,7 +157,7 @@ if (NOT KADU_INSTALL_INCLUDE_DIR)
 	if (WIN32)
 		set (KADU_INSTALL_INCLUDE_DIR ${KADU_SDK_DIR}/include)
 	else (WIN32)
-		set (KADU_INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/include/kadu)
+		set (KADU_INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_FULL_INCLUDEDIR}/kadu)
 	endif (WIN32)
 endif (NOT KADU_INSTALL_INCLUDE_DIR)
 
@@ -161,13 +165,13 @@ if (NOT KADU_CMAKE_MODULES_DIR)
 	if (WIN32)
 		set (KADU_CMAKE_MODULES_DIR ${KADU_SDK_DIR}/cmake/Modules)
 	else (WIN32)
-		set (KADU_CMAKE_MODULES_DIR ${CMAKE_INSTALL_PREFIX}/share/cmake/Modules)
+		set (KADU_CMAKE_MODULES_DIR ${CMAKE_INSTALL_FULL_DATADIR}/cmake/Modules)
 	endif (WIN32)
 endif (NOT KADU_CMAKE_MODULES_DIR)
 
 if (UNIX AND NOT APPLE)
 	if (NOT KADU_DESKTOP_FILE_DIR)
-		set (KADU_DESKTOP_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/applications)
+		set (KADU_DESKTOP_FILE_DIR ${CMAKE_INSTALL_FULL_DATADIR}/applications)
 	endif (NOT KADU_DESKTOP_FILE_DIR)
 	if (NOT KADU_DESKTOP_FILE_NAME)
 		set (KADU_DESKTOP_FILE_NAME kadu.desktop)
